--- a/index.html
+++ b/index.html
@@ -1063,7 +1063,7 @@
         if (supportedLangs.includes(paramLang)) return paramLang;
         const stored = localStorage.getItem("preferredLang");
         if (supportedLangs.includes(stored)) return stored;
-        const browserLang = navigator.language || (navigator as any).userLanguage;
+        const browserLang = navigator.language || navigator.userLanguage;
         if (browserLang && browserLang.toLowerCase().startsWith("ko")) return "ko";
         return defaultLang;
       }
