--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
               </button>
             </div>
 
-            <div class="note" id="summaryText">
+            <div class="note" id="summaryText" data-i18n-html="noteSummary">
               • 입력값이 부족하면 일부 항목은 0으로 처리됩니다.<br />
               • 계산은 "추정치"이며 실제 비용은 달라질 수 있습니다.
             </div>
